--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,51 @@ hr {
   border: 2px solid #8871ed;
   border-radius: 50px;
 }
+
+/* form */
+form {
+  margin: 1em auto;
+  display: flex;
+  justify-content: center;
+  padding: 1em;
+  width: 80%;
+  gap: 1em;
+}
+
+form>input {
+  font-size: 1.7em;
+  padding: .7em;
+  border-radius: 15px;
+  border: none;
+  outline: 5px solid transparent;
+  outline-offset: 3px;
+  flex: 1;
+  background: #f2f2f2;
+}
+
+form>input:focus {
+  outline-color: slateblue;
+}
+
+
+form>button {
+  border-radius: 15px;
+  width: fit-content;
+  padding: 1em;
+  height: 75px;
+  font-size: 1.4em;
+  cursor: pointer;
+  background: slateblue;
+  border: 1px solid #f2f2f270;
+  color: #f2f2f2;
+  transition: all .3s ease;
+  transform: scale(1)
+}
+
+form>button:hover {
+  background: rgb(92, 78, 185);
+}
+
+form>button:active {
+  transform: scale(.9);
+}
